# ML_real_world_course

./: README.md
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/kafka_to_feature_store/: Dockerfile  Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade-producer/: Dockerfile  Makefile  README.md  pyproject.toml
services/trade-producer/src/: config.py  kraken_api.py  main.py
services/trade-producer/src/kraken_api/: rest.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
