[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["gerard-martinez <gerard.martinez@king.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quixstreams = "^2.5.1"
websocket-client = "^1.8.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
